@@ -30,6 +30,8 @@
 - Add search_joins to columns, so it's possible to do left joins without loading associations only for searching
 - Fix set focus for inplace edit clone and ajax
 - Allow to override label for list column headings with a new helper method column_heading_label
+- Keep focus on last field when render_field is called
+- Add empty create and update methods to tableless
 
 = 3.2.19
 - Avoid crashing when between is chosen and from or to is not filled
